--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<p class="copyright text-center">
-							Copyright © 2015 <a href="http://themefisher.com/">Themefisher</a>. All rights reserved. Designed & developed by <a href="http://themefisher.com/">Themefisher</a>
+							Molly © 2022 <a href=""></a>. Todos los derechos reservados. Maketatsssión de Vegana Pagana <a href="https://www.instagram.com/veganaypagana/"></a>
 						</p>
 					</div>
 				</div>
